Fix product card layout issues, delete comments

--- a/index.html
+++ b/index.html
@@ -203,8 +203,8 @@
               <img src="" width="536" height="670" alt="">
             </div>
             <div class="product-gallery" data-color="white"></div>
-            <div class="product-gallery hidden" data-color="black"></div>
-            <div class="product-gallery hidden" data-color="pink"></div>
+<!--            <div class="product-gallery" data-color="black"></div>-->
+<!--            <div class="product-gallery" data-color="pink"></div>-->
           </div>
           <div class="product-info">
             <div>
